--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "geckodriver": "^1.9.0",
     "webdriverio": "^4.8.0"
   },
   "devDependencies": {
